Sonar Major fixes